--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.AndrushaDouble"
         tools:targetApi="31">
         <activity
+            android:name=".ComeBackActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ToInfActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".CalculatorBl"
             android:exported="true">
             <intent-filter>
@@ -24,9 +33,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
